--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,10 @@
         <canvas class="game-canvas" id="stage"></canvas>
         <canvas class="game-canvas" id="grid"></canvas>
         <canvas class="game-canvas" id="ui"></canvas>
+        <canvas class="game-canvas" id="debug"></canvas>
     </div>
+
+    <script src="/js/libs.js"></script>
     <script src="/js/client.js"></script>
 </body>
 </html>
